--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack serve --config config/webpack.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
-    "deploy": "yarn build && git add . && git commit -m 'app built' && git push origin master"
+    "deploy": "yarn build && git add . && git commit -m 'app built' && git push"
   },
   "keywords": [
     "webpack",
